# cafemp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Legacy  Makefile.Linux  Makefile.Release  README.md  bin2h.cmake  index.html  index.js  style.css
.github/ISSUE_TEMPLATE/: bug-report.yml
branding/: icon.xcf
content/infoCards/: Estonia.md  Germany.md  Latvia.md  Lithuania.md  Podcasts.md  Slovenia.md  Ukraine.md
shader/: nv12.frag.glsl  nv12.gsh  video.vert.glsl  yuv420p.frag.glsl  yuv420p.gsh
shaders/: red_quad.gsh  red_quad.ps  red_quad.vs  yuv2rgb.gsh  yuv2rgb.ps  yuv2rgb.vs
src/: app_state.cpp  app_state.hpp  audio_buffer.cpp  audio_buffer.hpp  audio_player.cpp  audio_player.hpp  config.hpp  globals.cpp  input.cpp  input.hpp  main.cpp  main.hpp  media_files.cpp  media_files.hpp  media_info.cpp  media_info.hpp  menu.cpp  menu.hpp  photo_viewer.cpp  photo_viewer.hpp  settings.cpp  settings.hpp  show.cpp  show.hpp  stdout.cpp  utils.cpp  utils.hpp  video_player.cpp  video_player.hpp
src/input/: input.cpp  input.hpp  input_actions.cpp  input_actions.hpp  input_manager.cpp  input_manager.hpp  keyboard.cpp  keyboard.hpp
src/logger/: logger.cpp  logger.hpp
src/player/: audio_player.cpp  audio_player.hpp  media_player.cpp  media_player.hpp  pdf_viewer.cpp  pdf_viewer.hpp  photo_viewer.cpp  photo_viewer.hpp  subtitle.cpp  subtitle.hpp  video_player.cpp  video_player.hpp
src/settings/: settings.cpp  settings.hpp
src/shader/: easter_egg.cpp  easter_egg.hpp  red_quad.cpp  red_quad.hpp  yuv2rgb.cpp  yuv2rgb.hpp
src/shaders/: nv12_shader.hpp  yuv420p_shader.hpp
src/ui/: menu.cpp  menu.hpp  scene.cpp  scene.hpp
src/ui/scenes/: scene_audio_player.cpp  scene_audio_player.hpp  scene_file_browser.cpp  scene_file_browser.hpp  scene_main_menu.cpp  scene_main_menu.hpp  scene_media_player.cpp  scene_media_player.hpp  scene_pdf_viewer.cpp  scene_pdf_viewer.hpp  scene_photo_viewer.cpp  scene_photo_viewer.hpp  scene_settings.cpp  scene_settings.hpp  scene_video_player.cpp  scene_video_player.hpp
src/ui/widgets/: widget_audio_player.cpp  widget_audio_player.hpp  widget_button_icon.hpp  widget_captions.cpp  widget_captions.hpp  widget_cursor.cpp  widget_cursor.hpp  widget_main_menu.cpp  widget_main_menu.hpp  widget_pdf_viewer.cpp  widget_pdf_viewer.hpp  widget_photo_viewer.cpp  widget_photo_viewer.hpp  widget_player_hud.cpp  widget_player_hud.hpp  widget_sidebar.cpp  widget_sidebar.hpp  widget_tooltip.cpp  widget_tooltip.hpp  widget_video_player.cpp
src/utils/: app_state.cpp  app_state.hpp  atomic.cpp  atomic.hpp  display.cpp  display.hpp  font.hpp  media_info.cpp  media_info.hpp  power_manager.cpp  power_manager.hpp  profiler.hpp  sdl.cpp  sdl.hpp  usb.cpp  usb.hpp  utils.cpp  utils.hpp
src_out/: widget_file_browser.cpp  widget_file_browser.hpp  widget_settings.cpp
tools/: compile_shader.sh  wut_rules
